whoami/whoami-ingressroute-http.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-https
  labels:
    app: whoami
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoami.jamezrin.name`) && PathPrefix(`/notls`)
      kind: Rule
      services:
        - name: whoami
          port: 80
